# Z1-Robotic-arm-Trajectory-planning

./: CMakeLists.txt  README.md
src/: armTest1.cpp  backToStart.cpp  comparisionArm.cpp  soiltest.cpp  soiltest1.cpp  test1.cpp
